--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
       referrerpolicy="no-referrer"
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <script src="js/animation-bar.js" defer></script>
+    <script src="js/animations.js" defer></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link rel="stylesheet" href="styles/global.css" />
     <link rel="stylesheet" href="styles/header.css" />
+    <link rel="stylesheet" href="styles/footer.css">
     <title>Speedy</title>
   </head>
   <body>
@@ -35,6 +36,11 @@
           <li><a href="index.html">Sobre nós</a></li>
           <li><a href="alugueis.html">Alugueis</a></li>
           <li><a href="parceria.html">Parceria</a></li>
+          <div class="icon-container">
+            <a href="cadastro.html">
+              <i class="fa-solid fa-user"></i>
+            </a>
+          </div>
         </ul>
       </nav>
     </header>
@@ -70,11 +76,7 @@
           data-aos="fade-up-right"
           data-aos-duration="1000"
         >
-          <div
-            class="description"
-            data-aos="fade-right"
-            data-aos-duration="1000"
-          >
+          <div class="description">
             <h1 class="desc-title">Fundação da empresa Speedy</h1>
             <p class="desc-history">
               A nossa história teve início oficialmente em 2001, quando o
@@ -85,7 +87,7 @@
               referência em carros de luxos
             </p>
           </div>
-          <img src="img/car-vintage3.avif" class="card-img" alt="" />
+          <img src="img/car-vintage3.avif" class="card-img" alt="carro-vintage" />
         </div>
       </section>
 
@@ -112,7 +114,7 @@
               data-aos="flip-left"
               data-aos-duration="1300"
             >
-              <a href="cadastro.html" class="btn-work">Clique e Alugue</a>
+              <a href="alugueis.html" class="btn-work">Clique e Alugue</a>
             </div>
           </div>
           <div class="desc-work">
