--- a/parceria.html
+++ b/parceria.html
@@ -100,7 +100,7 @@
               <input type="text" placeholder="Digite seu CPF" id="input-cpf">
             </div>
             <div class="line-input">
-              <label for="">Diponível até que dia?</label>
+              <label for="">Disponível até que dia?</label>
               <input type="text" placeholder="Digite os dias" id="input-dias">
             </div>
             <button class="btn-form" >Enviar</button>
