--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <p class="step-text">II - O que fazemos</p>
         </div>
         <div
-          class="text-container"
+          class="text-containerTwo"
           data-aos="fade-up"
           data-aos-anchor-placement="bottom-bottom" 
         >
@@ -149,17 +149,17 @@
             </a>
           </div>
         </div>
-        <div class="container-icons">
-          <a href="#">
-            <i class="fa-brands fa-instagram"></i>
-          </a>
-          <a href="#">
-            <i class="fa-brands fa-twitter"></i>
-          </a>
-          <a href="#">
-            <i class="fa-brands fa-facebook"></i>
-          </a>
-        </div>
+      </div>
+      <div class="container-icons">
+        <a href="#">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="#">
+          <i class="fa-brands fa-twitter"></i>
+        </a>
+        <a href="#">
+          <i class="fa-brands fa-facebook"></i>
+        </a>
       </div>
     </footer>
   </body>
