--- a/alugueis.html
+++ b/alugueis.html
@@ -228,6 +228,6 @@
       </div>
     </footer>
 
-  <script src="js/animations.js"></script>
+  <script src="js/animations.js" defer></script>
   </body>
 </html>
