--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <main>
       <div class="bg-home">
-        <section class="bg-container">
+        <section>
           <h1 class="title-sobre">Sobre Nós</h1>
         </section>
       </div>
