--- a/index.html
+++ b/index.html
@@ -53,9 +53,6 @@
       </div>
 
       <section class="desc-section">
-        <div data-aos="fade-left" data-aos-duration="1000">
-          <p class="step-text">1- Quem Somos</p>
-        </div>
         <div
           class="text-container"
           data-aos="fade-right"
@@ -93,7 +90,7 @@
 
       <section class="section-work">
         <div data-aos="fade-left" data-aos-duration="1000">
-          <p class="step-text">II - O que fazemos</p>
+          <p class="step-text"> O que fazemos</p>
         </div>
         <div
           class="text-containerTwo" 
